# sandbox-pilot

./: .gitignore  AUTHORS  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  implementation-plan.md
sandbox_pilot/: __init__.py  actions.py  cli.py  heuristics.py  monitor.py  vision.py
tests/: test_actions.py  test_cli.py  test_heuristics.py  test_monitor.py  test_vision.py
